# COMP426_Project-Multicore_Implementation_of_2D_Bouncing_Balls_Simulation_using_OpenCL

./: .gitignore  CMakeLists.txt  README.md  ball_def.h  cpu_kernel.cl  gpu_kernel.cl  kernel.cl  main.cpp
